syntax = "proto3";

package inventory;

option go_package = "sigma-inventory/proto";

service InventoryService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc GetProductByReservedId (GetProductByReservedIdRequest) returns (ProductResponse);
    rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (ProductResponse);
    rpc ReserveInventory(ReserveInventoryRequest) returns (ReserveInventoryResponse);
    rpc FreeReservedInventory(FreeReservedInventoryRequest) returns (FreeReservedInventoryResponse);
    rpc DecrementInventory(DecrementInventoryRequest) returns (DecrementInventoryResponse);
    rpc GetReservedInventory(GetReservedInventoryRequest) returns (ReservedProduct);
}

message CreateProductRequest {
    string name = 1;
    int32 quantity = 2;
    int32 price = 3;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    int32 price = 4;
}

message GetProductRequest {
    string id = 1;
}

message GetAllProductsRequest {
    
}

message GetAllProductsResponse {
    repeated UpdateProductRequest products = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    int32 price = 4;
}

message DeleteProductRequest {
    string id = 1;
}

message ReserveInventoryRequest {
    repeated OrderItem order_items = 1;
}

message ReserveInventoryResponse {
    repeated ReservedProduct reserved_products = 1;
}

message FreeReservedInventoryRequest {
    repeated ReservedProduct reserved_products = 1;
}

message FreeReservedInventoryResponse {
    bool success = 1;
}

message DecrementInventoryRequest {
    repeated OrderItem order_items = 1;
}

message DecrementInventoryResponse {
    bool success = 1;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
}

message ReservedProduct {
    string reserved_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message GetProductByReservedIdRequest {
    string reserved_id = 1;
}

message GetReservedInventoryRequest {
    string reserved_id = 1;
}